<resources>
    <string name="app_name">Week2</string>
    <string name="orange">This is an orange TextView</string>
    <string name="green">This is a green TextView</string>
    <string name="blue">This is a blue TextView</string>
    <string name="this_is_a_button">THIS IS A BUTTON</string>
    <string name="this_is_a_green_button">THIS IS A GREEN BUTTON</string>
    <string name="_hit">This is EditText</string>
    <string name="Hit2">This is a new EditText</string>
    <string name="notify_me">Notify me :)</string>
    <string name="auto_backup">Auto backup</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
</resources>
